infra/k8s/ingress/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   # namespace: ingress-nginx
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     # nginx.ingress.kubernetes.io/use-regex: "true"
#   # nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: senzen.com
#       http:
#         paths:
#           # - path: /
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: senzen-be-service
#                 port:
#                   number: 8080 # use the port not target port
#           # - path: /?(.*)
#     - host: senzen.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: senzen-fe-service
#                 port:
#                   number: 3000 # use the port not target port

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: senzen.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: senzen-be-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: senzen-fe-service
                port:
                  number: 3000
